# crypto-investments-tracker

./: .gitignore  Dockerfile  README.md  docker-compose.debug.yml  docker-compose.yml  pyproject.toml  requirements.txt  test.rest  vetur.config.js
.github/workflows/: codeql-analysis.yml
front/: .eslintrc.js  README.md  nuxt.config.js  package-lock.json  package.json
front/components/: CurrencyForm.vue  ExchangeForm.vue  HomeCurrencyCard.vue  InvestmentForm.vue
front/layouts/: default.vue  error.vue
front/pages/: currencies.vue  exchanges.vue  index.vue  investments.vue  login.vue
src/: manage.py
src/followInvests/: asgi.py  settings.py  urls.py  wsgi.py
src/investments/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
src/investments/fixtures/: currencies.json  exchanges.json
src/investments/migrations/: 0001_initial.py  0002_alter_currency_options_alter_investments_options.py  0003_exchange_rename_label_currency_name_and_more.py  0004_alter_exchange_options_currency_user_exchange_user_and_more.py  0005_remove_currency_user_remove_exchange_user.py  0006_investments_comment_investments_reference.py  0007_ordertype_alter_investments_order_type.py  0008_alter_investments_order_type.py
src/static/: sw.js
src/static/_nuxt/: 029a16b.js  058d3a3.js  05a099a.js  0d546da.js  0e96c70.js  0f31b61.js  0fcbd39.js  0fe1f16.js  1035d5c.js  14118c7.js  1d299d6.js  223448e.js  288729f.js  2cd8335.js  2f4b37c.js  38c3fb1.js  38fe8bd.js  3d8e97e.js  4214b92.js  43e8fb5.js  65296c3.js  69016cb.js  6c98a68.js  6da401b.js  7d29ae8.js  90438a0.js  (+40 more)
(+2 files in other folders)
