[tool.poetry]
name = "follow_invests"
version = "0.1.0"
description = ""
authors = ["xFerYtcp <xFerYtcp@github.com>"]
packages = [
    { include = "src" },
]


[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.2"
psycopg2-binary = "^2.9.3"
django-rest-framework = "^0.1.0"
django-spa = "^0.3.6"
djoser = "^2.1.0"
django-cors-headers = "^3.11.0"
python-decouple = "^3.6"
pathlib = "^1.0.1"
dj-database-url = "^0.5.0"

[tool.poetry.dev-dependencies]
black = {version = "^22.1.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
